--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,5 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css");
+
+.modal-dialog {
+    margin: 20rem auto;
+}
